--- a/client/src/style.css
+++ b/client/src/style.css
@@ -15,11 +15,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: #1a21a5;
+  text-decoration: underline;
 }
+
 a:hover {
-  color: #535bf2;
+  color: #0d1272;
 }
 
 * {
