--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Outfit:wght@100..900&display=swap');
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Lexend', 'Outfit', Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--bg-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,6 +25,20 @@ a:hover {
   color: #0d1272;
 }
 
+.btn-primary{
+  background-color: var(--secondary);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 0.6rem 3rem;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background-color: rgba(255, 78, 80, 0.6);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -31,7 +47,7 @@ a:hover {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg-color: #1f2029;
+    --bg-color: #262736;
     --text-color: #ffffff;
     --text-sec: #fdf7ee;
     --secondary: #fc6414;
